--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,7 +8,13 @@ license = "BSD-3-Clause"
 repository = "https://github.com/bolt-os/libsa"
 
 [features]
-default = []
-alloc   = []
+default = [
+    "endian",
+    "volatile",
+]
+
+alloc = []
+endian = []
+volatile = []
 
 [dependencies]
